--- a/public/index.html
+++ b/public/index.html
@@ -124,9 +124,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 
 	<script>
-		function clearSearch(){
-			document.getElementsByName('autocomplete')[0].value = '';
-		}
 
 	</script>
 </head>
@@ -168,7 +165,7 @@
 						<button type="button" class="btn btn-primary" ng-disabled="autocompleteForm.$invalid" ng-click="ctrl.getQuote(ctrl.searchText)">
 							<span class="glyphicon glyphicon-search"></span> Get Quote
 						</button>
-						<button id="search-clear" type="button" onclick="clearSearch()" class="btn btn-default">
+						<button id="search-clear" type="button" ng-click="ctrl.clearSearch()" class="btn btn-default">
 							<span class="glyphicon glyphicon-refresh"></span>		Clear
 						</button>
 					</div>
