--- a/public/index.html
+++ b/public/index.html
@@ -103,8 +103,8 @@
 		}
 	</style>
 
-	<script src="https://code.highcharts.com/highcharts.src.js"></script>
-
+<!-- 	<script src="https://code.highcharts.com/highcharts.src.js"></script>
+ -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -124,6 +124,10 @@
 
 	<!-- Angular Material Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+
+	<!-- 	Highstock  -->	
+	<script src="https://code.highcharts.com/stock/highstock.js"></script>
+	<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
 
 	<script>
 
@@ -266,7 +270,7 @@
 					  </ul>
 						<hr>
 						<div class='tab-content'>
-	        	<div class="container tab-pane fade in active" id="current">
+	        	<div class="tab-pane fade in active" id="current">
 		        	<div class="row">
 			        	<div class="col-md-6">
 						  		<table class="table table-striped col">
@@ -310,7 +314,8 @@
 							  <div id="priceChart" class="col-md-6"></div>
 						  </div>
 					  </div>
-					  <div class="container tab-pane fade in active" id="historical">
+					  <div class="tab-pane fade in active" id="historical">
+					  	<div id="historicalChart"></div>
 					  </div>
 					  </div>
 	        </div>
